2024-06-11T01:20:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9458012194 # 323
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-11
* notice: last 14d: unq all: 3 7
* notice: prev accum: outdated-unq outdated-all / unq all: 390 780 / 398 788
* notice: next accum: outdated-unq outdated-all / unq all: 391 781 / 398 788
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-28] / []

2024-06-10T01:21:31Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9441046104 # 322
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-10
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 389 779 / 398 788
* notice: next accum: outdated-unq outdated-all / unq all: 390 780 / 398 788
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-27] / []

2024-06-09T01:25:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9432954998 # 321
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-09
* notice: last 14d: unq all: 3 9
* notice: prev accum: outdated-unq outdated-all / unq all: 386 776 / 398 788
* notice: next accum: outdated-unq outdated-all / unq all: 389 779 / 398 788
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-05-25 2024-05-26] / []

2024-06-08T01:18:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9425052848 # 320