@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-11T01:20:13Z",
-  "count_outdated" : 781,
-  "uniques_outdated" : 391,
+  "timestamp" : "2024-06-12T01:20:06Z",
+  "count_outdated" : 782,
+  "uniques_outdated" : 392,
   "count" : 788,
   "uniques" : 398,
   "clones" : [
-    {
-      "timestamp": "2024-05-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-30T00:00:00Z",
       "count": 1,
