@@ -1,12 +1,7 @@
 {
-  "count": 7,
-  "uniques": 3,
+  "count": 6,
+  "uniques": 2,
   "clones": [
-    {
-      "timestamp": "2024-05-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-30T00:00:00Z",
       "count": 1,
