@@ -1,3 +1,12 @@
+2024-06-12T01:20:06Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9475136442 # 324
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-12
+* notice: last 14d: unq all: 2 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 391 781 / 398 788
+* notice: next accum: outdated-unq outdated-all / unq all: 392 782 / 398 788
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-05-29] / []
+
 2024-06-11T01:20:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9458012194 # 323
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-06-11
